Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-27464

[Wayland] Menu behaviour erratic (disappears too easily)

    XMLWordPrintable

Details

    • 72b7f2ca4d37d6de60235220036fd639813fb3ac

    Description

      When running an application with main window menus (e.g., creator or examples/widgets/mainwindows/application/application), menus disappear far too easily.

      On the QWindow compositor example, they flash on and disappear.

      On Weston, they flash when used for the first time. Then they appear to work, but do disappear when a submenu is shown.

      On the terminal, it says:

      This plugin does not support raise()
      This plugin does not support grabbing the keyboard
      

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            janichol Andy Nichols
            thiago Thiago Macieira
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes