Fix menus so they do not disappear instantly

We should not call handleWindowActivated(0) as a result of
QWaylandInputDevice::keyboard_leave

Task-number: QTBUG-27464

Change-Id: Ic59a051bc6403aa0c43a9525a4d09661065d177a
Reviewed-by: Samuel Rødal <samuel.rodal@digia.com>